# line_segment_eval

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
csrc/: HeatmapMatcher.cpp  HeatmapMatcher.h  LineMatcher.cpp  LineMatcher.h  LinePostprocessor.cpp  LinePostprocessor.h  _line_seg_eval.cpp  bindings.cpp
line_seg_eval/: __init__.py
line_seg_eval/core/: __init__.py  endpoints_metric.py  heatmap_metric.py  line_eval.py
line_seg_eval/pytorch/: __init__.py  line_eval.py
