[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "build",
    # Force numpy higher than 2.0rc1 for compatibility with Numpy 1.x and 2.x
    "numpy>=2.0.0rc1 ; python_version >= \"3.9\"",
    "oldest-supported-numpy ; python_version < \"3.9\"",
    "Cython",
    "pybind11>=2.12.0, <3",
]
build-backend = "setuptools.build_meta"

[project]
name = "line_seg_eval"
version = "0.1.2"
description = "High-performance Line Detection Evaluation (sAP, F1)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/SebastianJanampa/line_segment_eval"
